fix: input label gap

--- a/src/components/edit-profile/styles.scss
+++ b/src/components/edit-profile/styles.scss
@@ -51,6 +51,8 @@
 
   &__body-input {
     width: 240px;
+    gap: 4px;
+    line-height: 24px;
   }
 
   &__footer {
